--- a/style.css
+++ b/style.css
@@ -1,39 +1,40 @@
-body, html {
-    height: 100%;
+body,
+html {
+  height: 100%;
 }
 
 .bg {
-    background-image: url("images/backgroundImage.jpg");
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("images/backgroundImage.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .card {
-    margin-top: 30px;
-    background-color: #D2CEC5;
+  margin-top: 30px;
+  background-color: #d2cec5;
 }
 
 nav {
-    background-color: #A6C3BF;
+  background-color: #a6c3bf;
 }
 
 .btn {
-    background-color: #8FA7A3;
-    border: #8FA7A3;
+  background-color: #8fa7a3;
+  border: #8fa7a3;
 }
 
 .form-control {
-    background-color: whitesmoke;
-    border: none;
+  background-color: whitesmoke;
+  border: none;
 }
 
 li a {
-    color: #008080;
-    text-decoration: underline;
+  color: #008080;
+  text-decoration: underline;
 }
 
-.btn:hover{
-    background-color: #242900;
+.btn:hover {
+  background-color: #242900;
 }
